fixed issue with nav bg overlapping logo

--- a/raw_html/css/main.css
+++ b/raw_html/css/main.css
@@ -44,7 +44,7 @@ body {
 
 .nav > li > a:hover,
 .nav > li > a:focus {
-    background-color: white;
+    background-color: transparent;
     text-decoration: underline;
     color: #d62027;
     }
